discussion/kv_engine/155349/155349_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-43677: Add PCH Object Library

Add an object library containing a pre-compiled header that includes
headers commonly used throughout the codebase. This commit is a
proof of concept that use pre-compiled headers in various targets
throughout the code base.

Before:
Analyzing build trace from 'baseline.bin'...
**** Time summary:
Compilation (1759 times):
  Parsing (frontend):         3938.1 s
  Codegen & opts (backend):   1015.5 s

After:
Analyzing build trace from 'first.bin'...
**** Time summary:
Compilation (1778 times):
  Parsing (frontend):         3182.6 s
  Codegen & opts (backend):    889.1 s

Change-Id: I182fa5d0058849e02ff8d473e8477aa51d5d999f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-06-09 08:40:12.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-09 09:38:07.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9648/ : FAILURE

clang-tidy found the following problems:

<pre>
error: PCH file "/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/kv_engine/CMakeFiles/kv_pch.dir/cmake_pch.hxx.pch" not found: module file not found [clang-diagnostic-error]
error: PCH file "/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/kv_engine/CMakeFiles/kv_pch_fpic.dir/cmake_pch.hxx.pch" not found: module file not found [clang-diagnostic-error]
error: unable to read PCH file /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/kv_engine/CMakeFiles/kv_pch.dir/cmake_pch.hxx.pch: "No such file or directory" [clang-diagnostic-error]
error: unable to read PCH file /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/kv_engine/CMakeFiles/kv_pch_fpic.dir/cmake_pch.hxx.pch: "No such file or directory" [clang-diagnostic-error]

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9648/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36606/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36606/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31284/ : UNSTABLE

Clang Analyser identified one or more potential bugs - see <a href="clangScanBuildBugs">clangScanBuildBugs</a> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31284/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8246/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/189/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11226/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19228/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10296/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11645/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11374/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-09 13:41:20.000000000
Message: 
Patch Set 4:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9675/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9675/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9675/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8246/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/189/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31309/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11226/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19228/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10296/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11645/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11374/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36636/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
